# atriumdb-server

./: .gitignore  Dockerfile  README.md  atriumdb-server  requirements.txt
.github/workflows/: dockerhub-release.yml
atriumdb-server/: __main__.py
atriumdb-server/services/rest-api/: example.env
atriumdb-server/services/tsc-generator/: compose.yaml
atriumdb-server/services/wal-writer/: Dockerfile
azure-pipelines/: github-sync.yaml  release.yaml
deploy/: compose.yaml  config_example.yaml  example_api.env  secrets_example.yaml
deploy/easy_dev_setup/: compose.yaml
deploy/mariadb/: docker-compose.swarm.yml
deploy/siridb/: siridb.cluster.yml  uat.yml
lib/: pyproject.toml  setup.py
lib/tests/: test_batch.py  test_read_manager.py  test_read_process.py  test_wal_data.py  test_write_read.py  wal_data_generator.py
lib/wal/: README.md  __init__.py  batch.py  manager.py  pyproject.toml  read_manager.py  read_process.py  write_manager.py
lib/wal/io/: data.py  enums.py  header_structure.py  reader.py  writer.py
lib/wal/tests/: wal_data_generator.py
lib/wal/wal/: manager.py
rest_api/: Dockerfile  example.env  main.py
rest_api/app/core/: atriumdb.py  auth.py  config.py  database.py  influx.py  siri.py
rest_api/app/models/: __init__.py  census.py  encounter.py  patient.py
rest_api/app/schemas/: __init__.py  authentication.py  census.py  device.py  encounter.py  label.py  measure.py  patient.py
services/rest-api/: main.py
services/rest-api/azure-pipelines/: release.yaml
services/tsc-generator/: config_example.yaml
services/tsc-generator/src/: directory.py
services/wal-writer/azure-pipelines/: release.yaml
services/wal-writer/walwriter/: siridb_admin_tool.py
tsc_generator/: README.md  __init__.py
tsc_generator/azure-pipelines/: release.yaml
tsc_generator/src/: __init__.py  config.py  directory.py  main.py  optimizer.py  pyproject.toml  read_wal.py  requirements.txt  tsc_gen.py  tsc_gen_process.py  write_tsc.py
tsc_generator/src/helpers/: __init__.py  metrics.py  sql_functions.py
wal/: __init__.py  requirements.txt  write_manager.py
wal/tests/: test_read_manager.py  test_read_process.py  test_wal_data.py
wal/wal/: __init__.py
wal_writer/: README.md  __init__.py  async_wal_writer_siriDB.py  config_example.yaml  main.py  requirements.txt  secrets_example.yaml
wal_writer/helpers/: metrics.py
wal_writer/test/: reset.py  send.py  siri_test.py  test_end_to_end.py
wal_writer/walwriter/: config.py  siridb_admin_tool.py  wal_file_manager.py
(+46 files in other folders)
