# pyproject.toml

[build-system]
requires      = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "atriumdb-server-lib"
version = "1.0.0"
description = "AtriumDB Server Library"
readme = "README.md"
authors = [{ name = "Robert Greer", email = "robert.greer@sickkids.ca" },{ name = "William Dixon", email = "will.dixon@sickkids.ca" }, { name = "Spencer Vecile", email = "spencer.vecile@sickkids.ca" }]
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
]
keywords = []
dependencies = [
    "numpy >= 1.21",
    "orjson >= 3.6"
]
requires-python = ">=3.10"

[project.optional-dependencies]
dev = ["pytest"]

[project.urls]
Homepage = "https://github.com/LaussenLabs/atriumdb-server"
