# pyproject.toml

[build-system]
requires      = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "walLib"
version = "1.0.0"
description = "Write Ahead Log System for Ingesting Waveform Data"
readme = "README.md"
authors = [{ name = "William Dixon", email = "will.dixon@sickkids.ca" }, { name = "Spencer Vecile", email = "spencer.vecile@sickkids.ca" }]
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = []
dependencies = [
    "numpy ~= 1.21.2",
    "orjson ~= 3.6.4"
]
requires-python = ">=3.6"

[project.optional-dependencies]
dev = ["pytest"]

[project.urls]
Homepage = "https://github.com/LaussenLabs/WAL-Codec"
