[build-system]
requires      = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "adb-svc-tsc"
version = "0.1.0"
description = "Timeseries Compression Live Ingest Service"
readme = "README.md"
authors = [{ name = "William Dixon", email = "will.dixon@sickkids.ca" }, { name = "Spencer Vecile", email = "spencer.vecile@sickkids.ca" }]
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["timeseries", "database", "waveform", "ML"]
dependencies = [
    'wallib',
    "atriumdb",
    "numpy",
    "PyYAML ~= 6.0",
]
requires-python = ">=3.6"

[project.optional-dependencies]
dev = ["pytest"]

[project.urls]
#Homepage = ""
